# jsonflat

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
jsonflat/: __init__.py  __main__.py  core.py  sklearn.py
jsonflat/aws/: __init__.py  bedrock.py  cloudwatch.py  dynamodb.py  eventbridge.py  lambda_handler.py  s3.py  sqs.py  stepfunctions.py
jsonflat/integrations/: __init__.py  bedrock.py  cloudwatch.py  dynamodb.py  eventbridge.py  s3.py  sklearn.py  sqs.py  stepfunctions.py
jsonflat/integrations/aws/: bedrock.py  cloudwatch.py  dynamodb.py  eventbridge.py  lambda_handler.py  s3.py  sqs.py  stepfunctions.py
tests/: test_advanced.py  test_bedrock.py  test_cli.py  test_cloudwatch.py  test_collisions.py  test_dynamodb.py  test_dynamodb_streams.py  test_dynamodb_unmarshall.py  test_eventbridge.py  test_jsonflat.py  test_s3.py  test_s3_async.py  test_sklearn.py  test_sqs.py  test_stepfunctions.py  test_unflatten.py  test_version_fallback.py
